# research-workflow-tools

./: .gitignore  README.md  others_diff.tsv  pyproject.toml
examples/: Human Suggestions.ipynb  human_entry_suggestions.xlsx  lookup_fields.json  other_ignore_list.txt  patch.json
research_workflow_tools/: cmdline.py  other_entry_handler.py  utils.py
tests/: conftest.py  test_other_entry_handler.py
tests/test_data/: human_entry_suggestions_delete_case1.tsv  human_entry_suggestions_delete_case1_not_null.tsv  human_entry_suggestions_delete_case2.tsv  human_entry_suggestions_delete_case3.tsv  human_entry_suggestions_delete_case4.tsv  human_entry_suggestions_delete_case4_not_null.tsv  human_entry_suggestions_delete_case5.tsv  human_entry_suggestions_delete_case5_not_null.tsv  other_entry_dataset_case_delete.csv  other_entry_dataset_case_delete_case1.csv  other_entry_dataset_case_delete_case1.json  other_entry_dataset_case_delete_case2.csv  other_entry_dataset_case_delete_case2.json  other_entry_dataset_case_delete_case3.csv  other_entry_dataset_case_delete_case3.json  other_entry_dataset_case_delete_case4.json  other_entry_dataset_case_delete_case5.json  other_entry_dataset_case_delete_with_delete.csv
