[tool.poetry]
name = "research_workflow_tools"
version = "0.1.0"
description = "Toolsuite for simplifying the research workflows when working with large datasets. Handles various scenarios that are common to the process."
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
click = "^8.1.7"
panda-patch = {git = "https://github.com/Agriworks/panda-patches.git"}
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
mypy = "^1.9.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-others-suggestions = "pipeline.cmdline:process_human_entered_fields"
process-others-suggestions = "pipeline.cmdline:process_human_suggesstions"